# game.libretro.fba

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
depends/common/fbalpha/: CMakeLists.txt  fbalpha.txt
game.libretro.fba/: addon.xml  addon.xml.in
game.libretro.fbalpha/: addon.xml.in
game.libretro.fbalpha/resources/: settings.xml
game.libretro.fbalpha/resources/language/English/: strings.po
gameclient.fba/: addon.xml
